[tool.poetry]
name = "airbyte-databricks-cache"
version = "0.1.0"
description = ""
authors = ["ossmht <ossmht@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
airbyte = "^0.21.0"
databricks-sql-connector = "^3.6.0"


[tool.poetry.group.dev.dependencies]
twine = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
